--- a/application/app/src/main/res/layout/task_layout.xml
+++ b/application/app/src/main/res/layout/task_layout.xml
@@ -7,7 +7,7 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="10dp"
     app:contentPadding="10dp"
-    android:layout_height="150dp">
+    android:layout_height="170dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -63,39 +63,57 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Task Importance: "/>
+            <TextView
+                android:id="@+id/taskImportance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="right"
             android:layout_centerHorizontal="true">
 
-            <TextView
-                android:id="@+id/day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:alpha="0.5"
-                android:text="Tue"
-                android:drawableLeft="@drawable/ic_baseline_timer"
-                android:drawablePadding="5dp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/day"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:alpha="0.5"-->
+<!--                android:text="Tue"-->
+<!--                android:drawableLeft="@drawable/ic_baseline_timer"-->
+<!--                android:drawablePadding="5dp"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:textSize="20sp" />-->
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:alpha="0.5"
-                android:text=","
+                android:text="Due: "
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/month"
+                android:id="@+id/taskDueDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:alpha="0.5"
-                android:text="Nov"
+                android:text="2022-11-09"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
             <TextView
@@ -108,14 +126,14 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/taskDueTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:alpha="0.5"
-                android:text="18"
+                android:text="23:59"
                 android:textColor="@color/colorAccent"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/time"
