--- a/application/app/src/main/res/layout/task_layout.xml
+++ b/application/app/src/main/res/layout/task_layout.xml
@@ -74,7 +74,7 @@
                 android:id="@+id/taskImportance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5"/>
+                android:text="+5"/>
 
         </LinearLayout>
 
