--- a/application/app/src/main/res/layout/task_layout.xml
+++ b/application/app/src/main/res/layout/task_layout.xml
@@ -7,7 +7,7 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="10dp"
     app:contentPadding="10dp"
-    android:layout_height="170dp">
+    android:layout_height="140dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,42 +41,50 @@
             android:background="@android:color/black" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
 
             <CheckBox
                 android:id="@+id/todoCheckBox"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@android:color/holo_green_dark"
                 android:paddingStart="5dp"
                 android:textSize="15sp"
-                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
                 tools:text="Go to the market and bring vegetables immediately today." />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Task Importance: "/>
             <TextView
                 android:id="@+id/taskImportance"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:gravity="right"
                 android:text="+5"/>
 
         </LinearLayout>
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginTop="5dp">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Task Importance: "/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/taskImportance"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="+5"/>-->
+
+<!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="wrap_content"
