--- a/application/app/src/main/res/values/colors.xml
+++ b/application/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="three">#0000FF</color>
     <color name="two">#3D9140</color>
     <color name="one">#C0C0C0</color>
+    <color name="purple_200">#CE93D8</color>
+    <color name="purple_700">#7B1FA2</color>
+    <color name="teal_200">#80CBC4</color>
+
 </resources>
