--- a/application/app/src/main/res/layout/island_detail.xml
+++ b/application/app/src/main/res/layout/island_detail.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:layout_gravity="top"
-        android:background="#19bdff"
+        android:background="#94DFF9"
         />
     <LinearLayout
         android:layout_width="match_parent"
