--- a/application/app/src/main/res/layout/new_task.xml
+++ b/application/app/src/main/res/layout/new_task.xml
@@ -2,7 +2,8 @@
 <ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -63,15 +64,22 @@
                 android:text="Island Category"
                 tools:ignore="MissingPrefix" />
 
-            <EditText
-                android:textSize="14sp"
+<!--            <EditText-->
+<!--                android:textSize="14sp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:singleLine="true"-->
+<!--                android:padding="10dp"-->
+<!--                android:id="@+id/newTaskCategory"-->
+<!--                tools:ignore="MissingPrefix" />-->
+            <Spinner
+                android:id="@+id/newTaskCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:singleLine="true"
-                android:padding="10dp"
-                android:id="@+id/newTaskCategory"
-                tools:ignore="MissingPrefix" />
+                app:layout_constraintTop_toBottomOf="@id/newTaskCategory"
+                android:layout_marginTop="10dp"
+                ></Spinner>
 
             <TextView
                 android:id="@+id/newTaskImportance"
