--- a/application/app/src/main/res/layout/island_detail.xml
+++ b/application/app/src/main/res/layout/island_detail.xml
@@ -115,6 +115,17 @@
                 android:src="@drawable/island_egg_purple"
                 android:id="@+id/level234"
                 />
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="70dp"
+                android:scaleType="fitXY"
+                android:gravity="center"
+                android:layout_marginTop= "167dp"
+                android:layout_marginLeft= "70dp"
+                android:background="#00000000"
+                android:src="@drawable/adult_palm_tree"
+                android:id="@+id/level569"
+                />
         </RelativeLayout>
 
     </LinearLayout>
