--- a/application/app/src/main/res/values/colors.xml
+++ b/application/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="purple_200">#CE93D8</color>
     <color name="purple_700">#7B1FA2</color>
     <color name="teal_200">#80CBC4</color>
+    <color name="gray">#888</color>
+    <color name="blue">#0000FF</color>
 
 </resources>
