--- a/application/app/src/main/res/layout/task_layout.xml
+++ b/application/app/src/main/res/layout/task_layout.xml
@@ -68,6 +68,23 @@
 
         </LinearLayout>
 
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginTop="5dp">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Task Importance: "/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/taskImportance"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="+5"/>-->
+
+<!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -76,6 +93,17 @@
             android:layout_gravity="right"
             android:layout_centerHorizontal="true">
 
+<!--            <TextView-->
+<!--                android:id="@+id/day"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:alpha="0.5"-->
+<!--                android:text="Tue"-->
+<!--                android:drawableLeft="@drawable/ic_baseline_timer"-->
+<!--                android:drawablePadding="5dp"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:textSize="20sp" />-->
 
             <TextView
                 android:layout_width="wrap_content"
@@ -129,3 +157,30 @@
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    app:cardElevation="4dp"-->
+<!--    app:cardCornerRadius="8dp"-->
+<!--    android:layout_marginHorizontal="16dp"-->
+<!--    android:layout_marginVertical="8dp">-->
+
+<!--    <RelativeLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="8dp">-->
+
+<!--        <CheckBox-->
+<!--            android:id="@+id/todoCheckBox"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:buttonTint="@android:color/holo_green_dark"-->
+<!--            android:paddingStart="8dp"-->
+<!--            tools:text="Go to the market and bring vegetables immediately today." />-->
+
+<!--    </RelativeLayout>-->
+
+<!--</androidx.cardview.widget.CardView>-->
