--- a/application/app/src/main/res/layout/homepage_single_island.xml
+++ b/application/app/src/main/res/layout/homepage_single_island.xml
@@ -2,53 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <RelativeLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp">
+    android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="160dp"
-            android:layout_height="26dp"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_alignParentStart="true"
-            android:layout_marginVertical="@dimen/fab_margin"
-            android:progressBackgroundTint="@color/black"
-            android:progress="36">
-        </ProgressBar>
 
-        <TextView
-            android:id="@+id/level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginVertical="@dimen/fab_margin"
-            android:text="Lv 1"
-            android:textColor="@color/black"
-            android:textSize="20sp">
-        </TextView>
 
         <ImageButton
             android:id="@+id/islandImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/sand_island_1"
-            android:backgroundTint="#00000000"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="top"
-            android:layout_marginBottom="20dp">
-        </ImageButton>
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#00000000"
+            android:scaleType="fitXY"
+            android:src="@drawable/sand_island_1"></ImageButton>
 
-        <TextView
-            android:id="@+id/islandName"
+    <TextView
+        android:id="@+id/islandName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Study"
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"
+        android:textSize="26sp"></TextView>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Study"
-            android:textSize="26sp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/black">
-        </TextView>
-    </RelativeLayout>
+            android:layout_alignBottom="@id/islandName"
+            android:layout_below="@id/islandName"
+            >
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="160dp"
+                android:layout_height="26dp"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_alignParentStart="true"
+                android:layout_marginVertical="@dimen/fab_margin"
+                android:progressBackgroundTint="@color/black"
+                android:progress="36">
+            </ProgressBar>
+
+            <TextView
+                android:id="@+id/level"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginVertical="@dimen/fab_margin"
+                android:text="Lv 1"
+                android:textColor="@color/black"
+                android:textSize="20sp">
+            </TextView>
+
+        </LinearLayout>
 </LinearLayout>
